tests/snapshots/integration_test__log_data@f0c532b06273b527238e6cb7ecae40d6.snap
---
source: tests/integration_test.rs
description: "/home/runner/work/auditd-parser/auditd-parser/tests/data/linux-audit-parser-rs/line-mac-policy-load.log:1"
expression: result
info: "type=MAC_POLICY_LOAD msg=audit(1670142818.140:74058301): policy loaded auid=4294967295 ses=4294967295\u001dAUID=\"unset\""
---
{
  "Err": {
    "Parser": {
      "Parse": "error Char at:  loaded auid=4294967295 ses=4294967295\u001dAUID=\"unset\""
    }
  }
}
