tests/snapshots/integration_test__log_data@f2d079f9909e76f8b6cfdefe00c4c10b.snap
---
source: tests/integration_test.rs
description: "/home/runner/work/auditd-parser/auditd-parser/tests/data/go-libaudit/audit-rhel7.log:31"
expression: result
info: "type=UNKNOWN[1329] msg=?"
---
{
  "Err": {
    "Parser": {
      "Parse": "error Tag at: ?"
    }
  }
}
