tests/snapshots/integration_test__log_data@f56c6f203a95037bd170bcab5193d7af.snap
---
source: tests/integration_test.rs
description: "/home/jorge/github/auditd-parser/tests/data/auparse/test2.log:7"
expression: result
info: "type=LOGIN msg=audit(1170021601.343:286): pid=2288 uid=0 subj=system_u:system_r:init_t:s0 old-auid=4294967295 auid=42 tty=(none) old-ses=4294967295 ses=1 res=1"
---
{
  "record_type": "LOGIN",
  "timestamp": 1170021601343,
  "id": 286,
  "fields": {
    "auid": 42,
    "old-auid": null,
    "old-ses": "4294967295",
    "pid": "2288",
    "res": "success",
    "ses": "1",
    "subj": {
      "level": {
        "sensitivity": "s0"
      },
      "module": "SELinux",
      "role": "system_r",
      "type": "init_t",
      "user": "system_u"
    },
    "tty": "(none)",
    "uid": "root"
  }
}
